--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,1 +1,15 @@
-this is home
+<app-generation-card cardTitle="Chuck's Jokes 💬">
+  <ng-container generation-card-content>
+    <p>{{longText}}</p>
+    <div class="container-action">
+      <button matButton="filled">
+        <p>NEU</p>
+        <mat-icon>autorenew</mat-icon>
+      </button>
+      <button matButton="filled">
+        <p>FAVORISIEREN</p>
+        <mat-icon>star</mat-icon>
+      </button>
+    </div>
+  </ng-container>
+</app-generation-card>
