feat: cat overview with generation card

--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -1,1 +1,15 @@
-<p>cats works!</p>
+<app-generation-card cardTitle="Cutest Cats 😸">
+  <ng-container generation-card-content>
+    <img src="cat-placeholder.png" />
+    <div class="container-action">
+      <button matButton="filled">
+        <p>NEU</p>
+        <mat-icon>autorenew</mat-icon>
+      </button>
+      <button matButton="filled">
+        <p>FAVORISIEREN</p>
+        <mat-icon>star</mat-icon>
+      </button>
+    </div>
+  </ng-container>
+</app-generation-card>
