--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -1,8 +1,8 @@
 <app-generation-card cardTitle="Cutest Cats 😸">
   <ng-container generation-card-content>
-    <img src="cat-placeholder.png" />
+    <img [src]="urlCatPicture" />
     <div class="container-action">
-      <button matButton="filled">
+      <button (click)="fetchNewCat()" matButton="filled">
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
