--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -1,6 +1,15 @@
 <app-generation-card cardTitle="Cutest Cats 😸">
   <ng-container generation-card-content>
-    <img [src]="urlCatPicture" />
+    <div class="container-content">
+      @if (catResource.isLoading()){
+      <mat-spinner></mat-spinner>
+      } @else {
+      <img [src]="urlCatPicture" />
+      }
+    </div>
+  </ng-container>
+
+  <ng-container generation-card-action>
     <div class="container-action">
       <button (click)="fetchNewCat()" matButton="filled">
         <p>NEU</p>
