--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="tableData" class="mat-elevation-z8">
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
@@ -9,9 +9,9 @@
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="joke">
+  <ng-container matColumnDef="data">
     <th mat-header-cell *matHeaderCellDef>Inhalt</th>
-    <td mat-cell *matCellDef="let element">{{element.joke}}</td>
+    <td mat-cell *matCellDef="let element">{{element.data}}</td>
   </ng-container>
 
   <!-- Symbol Column -->
