feat: use favourite data service in jokes

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
-      <button matButton="filled">
+      <button (click)="favouriseJoke()" matButton="filled">
         <p>FAVORISIEREN</p>
         <mat-icon>star</mat-icon>
       </button>
