feat: use favourite data service in cats

--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -15,7 +15,7 @@
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
-      <button matButton="filled">
+      <button (click)="favouriseCat()" matButton="filled">
         <p>FAVORISIEREN</p>
         <mat-icon>star</mat-icon>
       </button>
