--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -8,10 +8,16 @@
     <td mat-cell *matCellDef="let element">{{element.identifier}}</td>
   </ng-container>
 
-  <!-- Name Column -->
+  <!-- Data Column -->
   <ng-container matColumnDef="data">
     <th mat-header-cell *matHeaderCellDef>Inhalt</th>
-    <td mat-cell *matCellDef="let element">{{element.data}}</td>
+    <td mat-cell *matCellDef="let element">
+      @if (element.data.type === AllowedDataTypes.Joke){
+      <p>{{element.data.data}}</p>
+      } @else if(element.data.type === AllowedDataTypes.Image){
+      <img [src]="element.data.data" />
+      }
+    </td>
   </ng-container>
 
   <!-- Symbol Column -->
