feat: improve application UI

--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -1,4 +1,4 @@
-<app-generation-card cardTitle="Cutest Cats 😸">
+<app-generation-card cardTitle="Süße Katzen 😸">
   <ng-container generation-card-content>
     <div class="container-content">
       @if (catResource.isLoading()){
