docs: add comments in code

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,6 +16,8 @@
       <h1>Über mich</h1>
       <p>Ich bin Chuck Norris, ein Kampfsportler und Schauspieler, der für meine Rollen in Actionfilmen bekannt ist.</p>
       <p>Die "Chuck Norris Facts" wurden populär, weil sie meine Actionhelden-Persönlichkeit humorvoll übertrieben und im Internet viral verbreitet wurden.</p>
+      <!-- Add more facts here -->
+      <p>...</p>
       <p>...</p>
     </div>
     <img src="chuck-norris-presentation.png" />
