--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -9,14 +9,10 @@
   </ng-container>
 
   <!-- Data Column -->
-  <ng-container matColumnDef="data">
+  <ng-container matColumnDef="joke">
     <th mat-header-cell *matHeaderCellDef>Inhalt</th>
     <td mat-cell *matCellDef="let element">
-      @if (element.data.type === AllowedDataTypes.Joke){
-      <p>{{element.data.data}}</p>
-      } @else if(element.data.type === AllowedDataTypes.Image){
-      <img [src]="element.data.data" />
-      }
+      <p>{{element.joke}}</p>
     </td>
   </ng-container>
 
