refactor: move chuck-jokes to own component

--- a/src/pages/jokes/jokes.html
+++ b/src/pages/jokes/jokes.html
@@ -1,25 +1,5 @@
-<!-- Section chuck's jokes -->
+<!-- app chuck's jokes -->
 <app-chuck-jokes-card />
 
-<!-- Section own jokes -->
-<!-- TODO add section -->
-<!-- <app-generation-card cardTitle="Eigene Witze 💬">
-  <ng-container generation-card-content>
-    <div class="container-content">
-
-      <mat-form-field class="example-full-width">
-        <mat-label>Leave a comment</mat-label>
-        <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
-      </mat-form-field>
-
-    </div>
-  </ng-container>
-  <ng-container generation-card-action>
-    <div class="container-action">
-      <button matButton="filled">
-        <p>FAVORISIEREN</p>
-        <mat-icon>star</mat-icon>
-      </button>
-    </div>
-  </ng-container>
-</app-generation-card> -->
+<!-- app own jokes -->
+<!-- TODO add new app -->
