--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -1,8 +1,8 @@
 <table mat-table [dataSource]="tableData" class="mat-elevation-z8">
   <!-- ID column -->
-  <ng-container matColumnDef="identifier">
+  <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>ID</th>
-    <td mat-cell *matCellDef="let element">{{element.identifier}}</td>
+    <td mat-cell *matCellDef="let element">{{element.id}}</td>
   </ng-container>
 
   <!-- Joke column -->
@@ -22,8 +22,8 @@
   <!-- Action column -->
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button (click)="deleteRow(element.identifier)" matMiniFab aria-label="Example icon button with a menu icon">
+    <td mat-cell *matCellDef="let element; let i = index">
+      <button (click)="deleteRow(i)" matMiniFab aria-label="Example icon button with a menu icon">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
