feat: add manual refresh option for apprentice

--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -32,3 +32,8 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<button (click)="refreshTable()" class="button-refresh" matFab extended aria-label="Table refresh button">
+  Refresh Table
+  <mat-icon>refresh</mat-icon>
+</button>
