refactor: use global button UI

--- a/src/pages/cats/cats.html
+++ b/src/pages/cats/cats.html
@@ -11,11 +11,11 @@
 
   <ng-container generation-card-action>
     <div class="container-action">
-      <button (click)="fetchNewCat()" matButton="filled">
+      <button (click)="fetchNewCat()" matButton>
         <p>NEU</p>
         <mat-icon>autorenew</mat-icon>
       </button>
-      <button (click)="favouriseCat()" matButton="filled">
+      <button (click)="favouriseCat()" matButton>
         <p>FAVORISIEREN</p>
         <mat-icon>star</mat-icon>
       </button>
