feat: implement authentication modal. modularized login and register

--- a/src/security/authentication-modal/authentication-modal.html
+++ b/src/security/authentication-modal/authentication-modal.html
@@ -1,17 +1,24 @@
-<app-login />
+<mat-dialog-content>
+  <h3>Anmeldung</h3>
+  <app-login />
+</mat-dialog-content>
+<mat-dialog-actions>
+  <!-- <button class="button-cancel" mat-flat-button (click)="closeDialog()">Abbrechen</button> -->
+</mat-dialog-actions>
+<div class="overlay"></div>
 
+<!-- <br />
 <br />
 <br />
-<br />
-<br />
+<br /> -->
 
-<app-register />
+<!-- <app-register /> -->
 
-<br />
+<!-- <br />
 <br />
 <br />
 <br />
 
 <div class="container">
   <button (click)="logout()" matButton>Logout</button>
-</div>
+</div> -->
