feat: add text to intro sentence

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,10 @@
   <!-- Section welcome -->
   <div class="presentation">
     <h1>Hallo!</h1>
-    <p>und herzlich willkommen in der innFactory! Ich bin Chuck Norris.</p>
+    <p>
+      und herzlich willkommen in der innFactory! Ich bin Chuck Norris. Die Angular Chuck Norris Challenge ist dein erster Einstieg in die Angular Webapp Entwicklung. Erledige alle
+      Challenges, damit Chuck Norris stolz auf dich ist!
+    </p>
   </div>
 
   <!-- Section about chuck -->
