feat: add commons license for picture

--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -23,6 +23,11 @@
       <p>...</p>
       <p>...</p>
     </div>
-    <img src="chuck-norris-presentation.png" />
+    <figure>
+      <img src="chuck-norris-presentation.png" />
+      <figcaption>
+        <a href="https://commons.wikimedia.org/wiki/File:Chuck_Norris,_The_Delta_Force_1986.jpg">Foto</a> von "Yoni S.Hamenahem", lizenziert unter CC BY-SA 3.0.
+      </figcaption>
+    </figure>
   </div>
 </article>
