--- a/src/pages/home-page/home-page.html
+++ b/src/pages/home-page/home-page.html
@@ -1,33 +1,5 @@
-<div class="logo">
-  <a href="/"><img loading="lazy" src="favicon.ico" /></a>
-</div>
+<!-- Intro section -->
+<app-animated-intro-section />
 
-<article>
-  <div class="triangle"></div>
-  <!-- Section welcome -->
-  <div class="presentation">
-    <h1>Hallo!</h1>
-    <p>
-      und herzlich willkommen in der innFactory! Ich bin Chuck Norris. Die Angular Chuck Norris Challenge ist dein erster Einstieg in die Angular Webapp Entwicklung. Erledige alle
-      Challenges, damit Chuck Norris stolz auf dich ist!
-    </p>
-  </div>
-
-  <!-- Section about chuck -->
-  <div class="about-me">
-    <div class="about-me-text">
-      <h1>Über mich</h1>
-      <p>Ich bin Chuck Norris, ein Kampfsportler und Schauspieler, der für meine Rollen in Actionfilmen bekannt ist.</p>
-      <p>Die "Chuck Norris Facts" wurden populär, weil sie meine Actionhelden-Persönlichkeit humorvoll übertrieben und im Internet viral verbreitet wurden.</p>
-      <!-- Add more facts here -->
-      <p>...</p>
-      <p>...</p>
-    </div>
-    <figure>
-      <img src="chuck-norris-presentation.png" />
-      <figcaption>
-        <a href="https://commons.wikimedia.org/wiki/File:Chuck_Norris,_The_Delta_Force_1986.jpg"><p>Foto</p></a> von "Yoni S.Hamenahem", lizenziert unter CC BY-SA 3.0.
-      </figcaption>
-    </figure>
-  </div>
-</article>
+<!-- About section -->
+<app-about-section id="aboutme" />
